crates/keron-lang/tests/corpus/errors/parse/reconcile_no_expr.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: unexpected end of input, expected `{` or expression
  --> 2:1
  |
2 | 
  | ^
